Spawn entities in creative too